app/src/main/java/com/example/mviexample/data/error/LocalError.kt
package com.example.mviexample.data.error

enum class LocalError() {
    IO,
    UNKNOWN_ERROR
}